Fixed Edge downloading results bug, added blur animation to opened menu when breakpoint is active, fixed the gradient bugs in SVGs (Safari specific bug), fixed the landing page issue where the content was still centered when vertical overflow occurs.

--- a/src/app/components/application/application.component.scss
+++ b/src/app/components/application/application.component.scss
@@ -24,6 +24,20 @@
     justify-content: center;
     align-items: center;
   }
+  &.v-fill {
+    height: 100%;
+  }
+}
+
+.logo-container {
+  height: 100%;
+  width: 100%;
+  min-height: rem(300px);
+  margin-bottom: rem(25px) !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 svg.logo {
